--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -152,8 +152,14 @@
           {% if job.connections.count %}
             {% for connection in job.connections.all %}
               <a href="{% url 'connections_detail' connection.id %}">
-                <div class="font-primary text-md font-normal bg-cyan-400 capitalize px-10 py-2 rounded-md hover:scale-105 transition duration-300">
-                    {{ connection.name }}
+                <div class="flex justify-center gap-2 font-primary text-md font-normal bg-cyan-400 capitalize px-2 py-2 rounded-md hover:scale-105 transition duration-300">
+					<a href="{% url 'unassoc_connection' job.id connection.id %}">
+						<svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" >
+						<path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+					   </svg>
+					</a>
+					  
+                    <p>{{ connection.name }}</p>
                 </div>
               </a>
             {% endfor %}
