--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -148,20 +148,21 @@
 				<div class="bg-cyan-300 flex items-center justify-start p-2">
 					<h4 class="font-semibold mx-auto">Associated Connection</h4>
 				</div>
-				<div class="flex flex-col justify-center items-center p-5 bg-white min-h-fit">
+				<div class="flex justify-center items-center p-5 bg-white min-h-fit">
           {% if job.connections.count %}
             {% for connection in job.connections.all %}
-              <a href="{% url 'connections_detail' connection.id %}">
-                <div class="flex justify-center gap-2 font-primary text-md font-normal bg-cyan-400 capitalize px-2 py-2 rounded-md hover:scale-105 transition duration-300">
-					<a href="{% url 'unassoc_connection' job.id connection.id %}">
-						<svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" >
-						<path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-					   </svg>
-					</a>
-					  
+              <div class="hover:scale-105 rounded-md bg-cyan-400 gap-2 py-2 px-4 mx-3 relative">
+                <a href="{% url 'unassoc_connection' job.id connection.id %}">
+                  <svg class="w-5 h-5 absolute left-[-0.5rem] top-[-0.5rem]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.72 6.97a.75.75 0 1 0-1.06 1.06L10.94 12l-1.72 1.72a.75.75 0 1 0 1.06 1.06L12 13.06l1.72 1.72a.75.75 0 1 0 1.06-1.06L13.06 12l1.72-1.72a.75.75 0 1 0-1.06-1.06L12 10.94l-1.72-1.72Z" clip-rule="evenodd" />
+                  </svg>
+                </a>
+                <a href="{% url 'connections_detail' connection.id %}">
+                  <div class="font-primary text-md font-normal capitalize hover:text-white transition duration-300">
                     <p>{{ connection.name }}</p>
-                </div>
-              </a>
+                  </div>
+                </a>
+              </div>
             {% endfor %}
           {% else %}
             <div class="font-primary text-md font-normal">
