adds conditionals for applied cold jobs on dash

--- a/main_app/templates/connections/detail.html
+++ b/main_app/templates/connections/detail.html
@@ -90,7 +90,7 @@
                 {% if interactions.count %}
                 {% for interaction in connection.interaction_set.all %}
                 <div class="flex gap-3 items-center my-1 text-left ">
-                  <a href="{% url 'delete_interaction' connections.id interaction.id %}">
+                  <a href="{% url 'delete_interaction' connection.id interaction.id %}">
                     <svg class="w-6 h-6 stroke-red-500"xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" >
                       <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
                     </svg>
