--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,41 +15,67 @@
       <div class="lg:w-1/2 h-[27.5rem] overflow-y-auto px-4">
         
         {% for job in jobs %}
-          {% if job.days_since_update > 21 %}
-        <a href="{% url 'detail' job.id %}">
-          <div
-          class="card my-3 bg-white min-h-fit text-center  hover:scale-[1.02] transition-all duration-300 ease-in-out">
-          <div class="bg-green-100 flex items-center justify-start p-2">
-            <svg
-            class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor">
-            <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
-          </svg>
-          <h4 class="font-semibold mx-auto capitalize">{{  job.position }} @ {{ job.company }}</h4>
-        </div>
-        <div class="flex-col justify-center items-center p-5">
-          {% for status in job.status_set.all %}
-          {% if forloop.last %}
-          <p class="my-1 font-semibold">
-            Last update <span class="text-primary"=>{{ job.days_since_update }}</span> Days Ago
-          </p>
-          <p class="my-1 font-normal">
-            {{ status.date }}: {{ status.description }}
-          </p>
+          {% if job.status_set.all %}
+            {% if job.days_since_update > 21 %}
+              <a href="{% url 'detail' job.id %}">
+                <div class="card my-3 bg-white min-h-fit text-center  hover:scale-[1.02] transition-all duration-300 ease-in-out">
+                  <div class="bg-green-100 flex items-center justify-start p-2">
+                    <svg
+                    class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor">
+                    <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
+                    </svg>
+                    <h4 class="font-semibold mx-auto capitalize">{{  job.position }} @ {{ job.company }}</h4>
+                  </div>
+                  <div class="flex-col justify-center items-center p-5">
+                    {% for status in job.status_set.all %}
+                      {% if forloop.last %}
+                    <p class="my-1 font-semibold">
+                      Last update <span class="text-primary"=>{{ job.days_since_update }}</span> Days Ago
+                    </p>
+                    <p class="my-1 font-normal">
+                      {{ status.date }}: {{ status.description }}
+                    </p>
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                </div>
+              </a>
+            {% endif %}
+          {% elif job.days_since_update > 21 %}
+            <a href="{% url 'detail' job.id %}">
+              <div class="card my-3 bg-white min-h-fit text-center  hover:scale-[1.02] transition-all duration-300 ease-in-out">
+                <div class="bg-green-100 flex items-center justify-start p-2">
+                  <svg
+                  class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor">
+                  <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
+                  </svg>
+                  <h4 class="font-semibold mx-auto capitalize">{{  job.position }} @ {{ job.company }}</h4>
+                </div>
+                <div class="flex-col justify-center items-center p-5">
+                  <p class="my-1 font-semibold">
+                    Applied <span class="text-primary"=>{{ job.days_since_update }}</span> Days Ago
+                  </p>
+                </div>
+              </div>
+            </a>
           {% endif %}
-          {% endfor %}
-      </div>
-    </div>
-  </a>
-  {% endif %}
-  {% endfor %}
+        {% endfor %}
   <!-- Cold Job Apps Card template -->
   <!-- End of Job app card template -->
 </div>
