fixes margin on job detail

--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -144,7 +144,7 @@
 			</div>
 
 			<!-- Connection card -->
-			<div class="mb-4 min-h-fit card text-center shadow-md bg-white">
+			<div class="min-h-fit card text-center shadow-md bg-white">
 				<div class="bg-cyan-300 flex items-center justify-start p-2">
 					<h4 class="font-semibold mx-auto">Associated Connection</h4>
 				</div>
