updates title on tabs

--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>AppMate Signup</title>
 		<script src="{%	static 'js/signup.js' %}" defer></script>
 		{% tailwind_css %}
 	</head>
